FInal App Code for Demo

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -36,9 +36,10 @@ $app-direction: ltr;
 $colors: (
   primary:    #488aff,
   secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  danger:     #ed6b57,
+  light:      #fff,
+  dark:       #222,
+  gold:     gold
 );
 
 
