--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -16,7 +16,7 @@ page-home {
 
     .round {
         margin-top: 50px;
-        margin-bottom: 50px;
+        margin-bottom: 30px;
         border-radius: 50%;
         width: 50%;
         border: 1px solid white;
@@ -27,5 +27,9 @@ page-home {
         padding-left: 10px; 
         border-radius: 30px;
         margin-top: 10px;
+    }
+
+    h1{
+        color: white;
     }
 }
